@@ -81,7 +81,7 @@ dependencies {
     implementation "org.apache.ivy:ivy:2.2.0"
     implementation "org.apache.pdfbox:pdfbox:2.0.23"
     implementation "org.apache.poi:poi:4.0.1"
-    implementation "org.yaml:snakeyaml:1.24"
+    implementation "org.yaml:snakeyaml:2.2"
     implementation 'com.vladsch.flexmark:flexmark-all:0.60.2' // for markdown to pdf conversion (sonarqube reports)
     implementation 'com.xlson.groovycsv:groovycsv:1.3'
 
@@ -91,13 +91,13 @@ dependencies {
     testImplementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
     testImplementation group: 'com.lesfurets', name: 'jenkins-pipeline-unit', version: '1.9' // "com.lesfurets:jenkins-pipeline-unit:1.9"
     testImplementation "net.bytebuddy:byte-buddy:1.10.8"
-    testImplementation "org.objenesis:objenesis:3.1"
+    testImplementation "org.objenesis:objenesis:3.3"
     testImplementation "cglib:cglib-nodep:3.3.0"                      // for mocking classes
     testImplementation "com.github.stefanbirkner:system-rules:1.19.0" // for managing environment variables
     testImplementation "com.github.tomakehurst:wiremock:2.27.2"       // for mocking HTTP server responses
     testImplementation "com.github.tomakehurst:wiremock-jre8:2.32.0" // for mocking HTTP server responses
-    testImplementation "org.hamcrest:hamcrest:2.1"
-    testImplementation "org.skyscreamer:jsonassert:1.5.0"             // JSON Asserts
+    testImplementation "org.hamcrest:hamcrest:2.2"
+    testImplementation "org.skyscreamer:jsonassert:1.5.1"             // JSON Asserts
 }
 
 sourceSets {
@@ -128,7 +128,6 @@ test {
     systemProperty 'com.athaydes.spockframework.report.projectName', 'ods-jenkins-shared-library'
     systemProperty 'com.athaydes.spockframework.report.projectVersion', version
     maxHeapSize = "2048m"
-    jvmArgs "-XX:MaxPermSize=256m"
     systemProperty "testRecordMode", project.findProperty('testRecordMode')?: false
     systemProperty "generateExpectedPdfFiles", project.findProperty('generateExpectedPdfFiles')?: false
     systemProperty "nexusURL", project.findProperty('nexusURL')?: "http://nexus.odsbox.lan:7990"
@@ -144,7 +143,7 @@ test {
 }
 
 codenarc {
-    toolVersion = '1.5'
+    toolVersion = '1.6'
     configFile = file('codenarc.groovy')
     maxPriority1Violations = 0
     maxPriority2Violations = 1
